--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,75 +1,100 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 3632603 */
-  src: url('iconfont.woff2?t=1662446430277') format('woff2'),
-       url('iconfont.woff?t=1662446430277') format('woff'),
-       url('iconfont.ttf?t=1662446430277') format('truetype');
+  font-family: "toutiao"; /* Project id 3632889 */
+  src: url('iconfont.woff2?t=1662445587711') format('woff2'),
+       url('iconfont.woff?t=1662445587711') format('woff'),
+       url('iconfont.ttf?t=1662445587711') format('truetype'),
+       url('iconfont.svg?t=1662445587711#toutiao') format('svg');
 }
 
-.iconfont {
-  font-family: "iconfont" !important;
+.toutiao {
+  font-family: "toutiao" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-sousuo:before {
+.toutiao-shouji:before {
+  content: "\e601";
+}
+
+.toutiao-shoucang:before {
   content: "\e602";
 }
 
-.icon-shouji:before {
+.toutiao-shanchu:before {
   content: "\e603";
 }
 
-.icon-fenxiang:before {
+.toutiao-shouye:before {
   content: "\e604";
 }
 
-.icon-dianzan:before {
+.toutiao-sousuo:before {
   content: "\e605";
 }
 
-.icon-shoucang:before {
+.toutiao-wode:before {
   content: "\e606";
 }
 
-.icon-pinglun:before {
+.toutiao-shipin:before {
   content: "\e607";
 }
 
-.icon-gengduo:before {
+.toutiao-youjiantou:before {
   content: "\e608";
 }
 
-.icon-wuwangluo:before {
+.toutiao-wenda:before {
   content: "\e609";
 }
 
-.icon-shipin:before {
+.toutiao-yanzhengma:before {
   content: "\e60a";
 }
 
-.icon-wenda:before {
+.toutiao-zuojiantou:before {
   content: "\e60b";
 }
 
-.icon-shouye:before {
+.toutiao-wuwangluo:before {
   content: "\e60c";
 }
 
-.icon-yanzhengma:before {
+.toutiao-yuedu:before {
   content: "\e60d";
 }
 
-.icon-yuedu:before {
+.toutiao-dianzan:before {
   content: "\e60e";
 }
 
-.icon-dianzan2:before {
+.toutiao-dianzan2:before {
   content: "\e60f";
 }
 
-.icon-zuopin:before {
-  content: "\e601";
+.toutiao-fenxiang:before {
+  content: "\e610";
+}
+
+.toutiao-guanbi:before {
+  content: "\e611";
+}
+
+.toutiao-lishi:before {
+  content: "\e612";
+}
+
+.toutiao-zuopin:before {
+  content: "\e613";
+}
+
+.toutiao-pinglun:before {
+  content: "\e614";
+}
+
+.toutiao-gengduo:before {
+  content: "\e615";
 }
 
